packages/Scripture Map 2D/scriptureMap2D/styles/styles.css
/* ... */
.zoom-level-selector > * {
  padding: 8px;
  width: 100%;
  color: var(--iconColor);
}

.zoom-level-selector > span {
  font-size: 16px;
  font-weight: 600;
  text-align: start;
  /* margin-bottom: 8px; */
}

.zoom-level-selector > button {
  display: flex;
  justify-content: space-between;
  align-items: center;
  appearance: none;
  border: none;
  background-color: transparent;
  font-size: 16px;
  border-radius: calc(var(--scale-factor) * 4px);
}

.zoom-level-selector button:hover {
  background-color: var(--primaryLight);
}

.zoom-level-selector > button > span {
  color: inherit;
}

.zoom-level-selector > button > span:nth-of-type(2) {
  border-radius: 25px;
  width: 16px;
  height: 16px;
  background-color: transparent;
  border: solid 5px var(--secondaryColor);
}

.scripture-map-2d-wrapper .scripture-map-2d-container {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  justify-self: center;
  width: 100%;
  height: 100%;
  max-width: 100%;
  overflow: scroll;
  gap: calc(28px * var(--scale-factor));
  padding: 8px 16px 0;
  /* z-index: 10; */
}

.scripture-map-2d-wrapper .scripture-map-2d-container .testament-container {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  gap: calc(16px * var(--scale-factor));
  width: 100%;
}

.scripture-map-2d-wrapper
  .scripture-map-2d-container
  .testament-container
  .testament-content {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: calc(16px * var(--scale-factor));
  align-items: start;
  z-index: 0;
}

.testament-content .books-container {
  display: flex;
  gap: calc(8px * var(--scale-factor));
  width: 100%;
  justify-content: flex-start;
  align-items: flex-start;
  flex-wrap: wrap;
}

.books-container .book-container {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  min-height: 80px;
  border: solid calc(2px * var(--scale-factor)) var(--whitegray-color);
  border-radius: calc(10px * var(--scale-factor));
  padding: calc(8px * var(--scale-factor));
  gap: calc(12px * var(--scale-factor));
}

.scripture-map-2d-wrapper
  .scripture-map-2d-container
  .testament-container
  .book-container
  .book-cover {
  background: var(--firstToolbarbutton);
  width: 100%;
  border-radius: calc(8px * var(--scale-factor));
  border: solid 1px transparent;
  display: grid;
  gap: var(--chapter-gap);
  position: relative;
  grid-template-columns: repeat(var(--book-max-columns), var(--chapter-width));
  grid-template-rows: repeat(auto-fill, var(--chapter-width));
  justify-content: center;
  align-items: center;
  justify-items: center;
}

.book-container .book-header {
  cursor: pointer;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.book-container .book-header > * {
  font-family: system-ui;
}

.book-header .book-id {
  font-size: calc(24px * var(--scale-factor));
  font-weight: 500;
  color: var(--pageTextColor);
  text-box: auto;
}

.book-header .book-name {
  font-size: calc(16px * var(--scale-factor));
  color: var(--pageTextColor);
  font-style: italic;
}

.scripture-map-2d-wrapper
  .scripture-map-2d-container
  .testament-container
  .book-container
  .book-cover
  .chapter {
  background: var(--firstToolbarbutton);
  border-color: var(--firstToolbarbutton);
  color: var(--pageTextColor);
  visibility: visible;
  font-size: calc(12px * var(--scale-factor));
  width: var(--chapter-width);
  height: var(--chapter-height);
  position: relative;
  border-radius: calc(2px * var(--scale-factor));
  cursor: pointer;
  border-width: calc(3px * var(--scale-factor));
  font-family: system-ui;
  text-box: auto;
  vertical-align: middle;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  --userPresenceBorderPadding: calc(var(--scale-factor) * 2px);
}

.scripture-map-2d-wrapper
  .scripture-map-2d-container
  .testament-container
  .book-container
  .book-cover
  .chapter.show-user-presence {
  width: calc(var(--chapter-width) - var(--userPresenceBorderPadding));
  height: calc(var(--chapter-width) - var(--userPresenceBorderPadding));
}

@property --angle {
  syntax: "<angle>";
  initial-value: 0deg;
  inherits: false;
}

.book-container .book-cover .chapter.show-user-presence::before,
.book-container .book-cover .chapter.show-user-presence::after,
.book-container .book-cover.show-user-presence::before,
.book-container .book-cover.show-user-presence::after {
  content: "";
  position: absolute;
  height: 100%;
  width: 100%;
  top: 50%;
  left: 50%;
  translate: -50% -50%;
  z-index: -1;
  animation: 8s spin linear infinite;
  box-sizing: content-box;
}

.book-container .book-cover .chapter.show-user-presence::before,
.book-container .book-cover .chapter.show-user-presence::after {
  background-image: conic-gradient(
    from var(--angle),
    var(--userPresenceColors)
  );
  padding: var(--userPresenceBorderPadding);
  border-radius: calc(3px * var(--scale-factor));
}

.book-container .book-cover.show-user-presence::before,
.book-container .book-cover.show-user-presence::after {
  background-image: conic-gradient(
    from var(--angle),
    var(--bookUserPresenceColors)
  );
  padding: calc(var(--scale-factor) * 6px);
  border-radius: calc(10px * var(--scale-factor));
}

.book-container .book-cover.show-user-presence::before {
  filter: blur(0.2rem);
  opacity: 0.7;
}

.toggle {
  width: 100%;
  padding: calc(12px * var(--scale-factor)) calc(20px * var(--scale-factor));
  color: black;
  border-radius: calc(8px * var(--scale-factor));
  cursor: pointer;
}

.toggle > span {
  text-align: center;
  vertical-align: middle;
  text-box: auto;
  /* font-size: calc(32px * var(--scale-factor)); */
}

.toggle > span.toggle-title,
.toggle > span.toggle-description {
  font-family: system-ui;
  overflow: hidden;
  text-overflow: ellipsis;
  text-align: start;
  color: var(--pageTextColor);
}
/* ... */

